--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -17,11 +17,10 @@
 %\draftQfalse
 %--------------
 %###################################
-\def\TITLE{\LARGE Learning  Mutational Patterns At Scale For\\A 
-Biologically Meaningful Metric\\For Analyzing Sequence Divergence\\In Novel Pathogens}
+\def\TITLE{\LARGE Learning  Mutational Patterns For Fast Scalable Risk Estimation of Emerging Influenza Strains}
 %\def\TITLE{\LARGE A Biologically Meaningful Sequence Metric\\For Analyzing Evolutionary Changes\\In Novel Pathogens}
-\def\TITLE{Learning  Mutational Patterns At Scale For\\Analysis Of Sequence Divergence\\In Novel Pathogens}
-\def\TITLE{Learning Mutational Patterns at Scale to Analyze Sequence Divergence in Novel Pathogens}
+%\def\TITLE{Learning  Mutational Patterns At Scale For\\Analysis Of Sequence Divergence\\In Novel Pathogens}
+%\def\TITLE{Learning Mutational Patterns at Scale to Analyze Sequence Divergence in Novel Pathogens}
 
 \def\authore{Kevin Wu}
 \def\authora{ Jin Li}
@@ -30,7 +29,7 @@ Biologically Meaningful Metric\\For Analyzing Sequence Divergence\\In Novel Path
 \def\authord{Ishanu Chattopadhyay}
 
 \def\addressa{Department of Medicine, University of Chicago, IL, USA}
-\def\addressb{Committee on Genetics, Genomics \& Systems Biology, University of Chicago, IL, USA}
+\def\addressb{Committee on Genetics, Genomics \& Systems BioloScalegy, University of Chicago, IL, USA}
 \def\addressc{Committee on Quantitative Methods in Social, Behavioral, and Health Sciences, University of Chicago, IL, USA}
 \def\addressd{Pritzker School of Molecular Engineering, University of Chicago, Chicago, IL, USA}
 \def\addresse{Committee on Immunology, University of Chicago, Chicago, IL, USA}
