--- a/tex/main.tex
+++ b/tex/main.tex
@@ -32,7 +32,7 @@
 {\color{MediumBlue}
   {\bf \sffamily \fontsize{10}{12}\selectfont \noindent
     
-Influenza viruses constantly evolve~\cite{dos2016influenza}, and mismatches between predicted and circulating strains impact vaccine effectiveness~\cite{tricco2013comparing}. Currently precisely predicting the season-specific dominant strains is limited by our inability to forecast future mutations, or quantify the numerical likelihood of specific strains emerging in future. In this study, we introduce a biology-aware sequence similarity metric based on deep pattern recognition of emergent evolutionary constraints. We use our model in two applications. One, we calculate the odds of future mutations, outperforming WHO recommended flu vaccine compositions almost consistently over the past two decades. Two, we compute emergence risk of strains previously analyzed by the CDC's Influenza Risk Assessment Tool, showing a moderately strong linear correlation between our predictions and the CDC's, though our predictions require much less time and resources.}
+Influenza viruses constantly evolve~\cite{dos2016influenza}, and mismatches between predicted and circulating strains impact vaccine effectiveness~\cite{tricco2013comparing}. Currently precisely predicting the season-specific dominant strains is limited by our inability to forecast future mutations, or quantify the numerical likelihood of specific strains emerging in future. In this study, we introduce a biology-aware sequence similarity metric based on deep pattern recognition of emergent evolutionary constraints. We use our model in two applications. One, we calculate the odds of future mutations, outperforming WHO recommended flu vaccine compositions almost consistently over the past two decades. Two, we compute emergence risk of strains previously analyzed by the CDC's Influenza Risk Assessment Tool, showing a strong linear correlation between our predictions and the CDC's, though our predictions require much less time and resources.}
 }
 
 \vspace{10pt}
